hphp/hack/test/typecheck/new_inference/idx_bug.php.like_types.exp
File "idx_bug.php", line 16, characters 24-25:
Invalid argument (Typing[4110])
File "idx.hhi", line 32, characters 3-25:
Expected ?KeyedContainer<[unresolved], ?[unresolved]>
File "idx_bug.php", line 6, characters 6-27:
But got <expr#1> because it is an unenforceable type
File "idx_bug.php", line 17, characters 34-35:
Invalid argument (Typing[4110])
File "idx.hhi", line 32, characters 3-25:
Expected ?KeyedContainer<[unresolved], [unresolved]>
File "idx_bug.php", line 6, characters 6-27:
But got <expr#1> because it is an unenforceable type
